argocd-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    service: argocd-ingress
  name: argocdingress
  namespace: argocd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
status:

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-argocd-ingress-3
  namespace: argocd
spec:
  rules:
  - host: argocd.b
    http:
      paths:
      - backend:
          service:
            name: argocdingress
            port: 
              number: 80
        path: /
        pathType: Prefix      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-3
  namespace: argocd
spec:
  rules:
  - host: argocd.b
    http:
      paths:
      - backend:
          service:
            name: argocdingress
            port: 
              number: 443
        path: /
        pathType: Prefix
